syntax = "proto3";
service helloWorld {
		rpc hello(HelloRequest) returns (HelloResponse);
		rpc bye(ByeRequest) returns (ByeResponse);
}

message HelloResponse {
	string message = 1;
}
message ByeRequest {
	string greet = 1;
}
message ByeResponse {
	string say = 1;
}

